Bug 1841030 - cache the thread id in thread-local storage r=profiler-reviewers,canaltinova

Differential Revision: https://phabricator.services.mozilla.com/D205838